test/trivial/diten/printvisibleExtraArg.good
printvisibleExtraArg.chpl:2: error: too many arguments to 'get visible symbols'
